# pairwise_testing

./: .coverage  .gitignore  README.md  conftest.py  generate_random_suite.py  pyproject.toml  random_tests.csv  tabulate.py  tabulate_model.txt  test_constraints_logic.py  test_negative_cases.py  test_random.py  test_tabulate_pairwise.py  utils.py
data/: negative_tests.csv  pairwise_tests.csv
scripts/: generate_negative_tests.py  generate_random_suite.py
src/tabulate/: __init__.py  __main__.py
tests/: test_negative.py  test_random.py  test_tabulate_pairwise.py
