[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tabulate"
version = "0.9.0"
description = "Pretty-print tabular data"
authors = [
  { name = "Sergey Astanin", email = "s.astanin@gmail.com" },
]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
]
keywords = ["table", "tabular", "pretty-print"]
dependencies = [
    "wcwidth",
]

[project.urls]
"Homepage" = "https://github.com/astanin/python-tabulate"

[project.scripts]
tabulate = "tabulate:_main"

[tool.setuptools.packages.find]
where = ["src"]
